# cultura_project

./: .gitignore  Makefile  README.md  env  json_to_db.ipynb  process_images_for_latex.sh  pyproject.toml  requirements.txt
Immaterial_index/: 1 - make_individuals_and_regions_score.ipynb  clean_individuals.ipynb  make_individuals_and_regions_score.ipynb  make_individuals_score.ipynb  make_region_score.ipynb  make_region_score_full.ipynb
bayesian_statistics/: BRM_charles.ipynb  BRM_normal_top_50_top_10_top_analysis_filtered_gdb.ipynb  BRM_over_1800.ipynb  BRM_over_1810.ipynb  README.md  make_stats.ipynb  make_stats_charles.ipynb
beautiful_figures/: test.ipynb  unseen.ipynb
data/: df_region_score.csv  df_trends_individuals.csv
data_legacy/: df_trends.csv  df_trends_works.csv
docs/: bayesian_statistics.md  data_extraction.md  database_description.md  immaterial_production.md  unseen_model.md
environnement_data/: ENS - Cultural Index - Countries Databases - consolidate_table.csv  ENS - Cultural Index - Countries Databases - consolidate_table_old.csv  ENS - Cultural Index - Countries Databases - gdp_consolidate_table.csv  ENS - Cultural Index - Countries Databases - list_country_code.csv  ENS - Cultural Index - Countries Databases - population_consolidate_date_harmonization.csv  ENS - Cultural Index - Countries Databases - population_region.csv  ENS - Cultural Index - Countries Databases - population_value.csv  Maddison Peoject UpDate2020.xlsx - GDP pc (1).csv  Wikipedia_language - code.csv  gdp.csv  gdp_clean.csv  gdp_clean_region_name.csv  population.csv  (+4 more)
(+402 files in other folders)
